// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmailChallengeTransformer Tests should create email challenge UI elements when profile email is NOT available 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {},
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "elements": Array [
          Object {
            "elements": Array [
              Object {
                "options": Object {
                  "action": [Function],
                  "ctaText": "email.code.not.received",
                  "linkLabel": "email.button.resend",
                },
                "type": "Reminder",
              },
              Object {
                "options": Object {
                  "content": "oie.email.mfa.title",
                },
                "type": "Title",
              },
              Object {
                "options": Object {
                  "content": "oie.email.verify.alternate.magicLinkToYourEmailoie.email.verify.alternate.instructions",
                },
                "type": "Description",
              },
              Object {
                "label": "oie.email.verify.alternate.showCodeTextField",
                "options": Object {
                  "nextStepIndex": 1,
                  "type": "button",
                  "variant": "secondary",
                },
                "type": "StepperButton",
              },
            ],
            "type": "VerticalLayout",
          },
          Object {
            "elements": Array [
              Object {
                "options": Object {
                  "action": [Function],
                  "ctaText": "email.code.not.received",
                  "linkLabel": "email.button.resend",
                },
                "type": "Reminder",
              },
              Object {
                "options": Object {
                  "content": "oie.email.mfa.title",
                },
                "type": "Title",
              },
              Object {
                "options": Object {
                  "content": "oie.email.verify.alternate.magicLinkToYourEmailoie.email.verify.alternate.instructions",
                },
                "type": "Description",
              },
              Object {
                "label": "email.enroll.enterCode",
                "name": "credentials.passcode",
              },
              Object {
                "label": "mfa.challenge.verify",
                "options": Object {
                  "step": "mock-step",
                  "type": "submit",
                },
                "scope": "#/properties/submit",
                "type": "Button",
              },
            ],
            "type": "VerticalLayout",
          },
        ],
        "type": "Stepper",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`EmailChallengeTransformer Tests should create email challenge UI elements when resend code is NOT available 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {},
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "elements": Array [
          Object {
            "elements": Array [
              Object {
                "options": Object {
                  "content": "oie.email.mfa.title",
                },
                "type": "Title",
              },
              Object {
                "options": Object {
                  "content": "oie.email.verify.alternate.magicLinkToEmailAddressoie.email.verify.alternate.instructions",
                },
                "type": "Description",
              },
              Object {
                "label": "oie.email.verify.alternate.showCodeTextField",
                "options": Object {
                  "nextStepIndex": 1,
                  "type": "button",
                  "variant": "secondary",
                },
                "type": "StepperButton",
              },
            ],
            "type": "VerticalLayout",
          },
          Object {
            "elements": Array [
              Object {
                "options": Object {
                  "content": "oie.email.mfa.title",
                },
                "type": "Title",
              },
              Object {
                "options": Object {
                  "content": "oie.email.verify.alternate.magicLinkToEmailAddressoie.email.verify.alternate.instructions",
                },
                "type": "Description",
              },
              Object {
                "label": "email.enroll.enterCode",
                "name": "credentials.passcode",
              },
              Object {
                "label": "mfa.challenge.verify",
                "options": Object {
                  "step": "mock-step",
                  "type": "submit",
                },
                "scope": "#/properties/submit",
                "type": "Button",
              },
            ],
            "type": "VerticalLayout",
          },
        ],
        "type": "Stepper",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`EmailChallengeTransformer Tests should create email challenge UI elements when resend code is available 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {},
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "elements": Array [
          Object {
            "elements": Array [
              Object {
                "options": Object {
                  "action": [Function],
                  "ctaText": "email.code.not.received",
                  "linkLabel": "email.button.resend",
                },
                "type": "Reminder",
              },
              Object {
                "options": Object {
                  "content": "oie.email.mfa.title",
                },
                "type": "Title",
              },
              Object {
                "options": Object {
                  "content": "oie.email.verify.alternate.magicLinkToEmailAddressoie.email.verify.alternate.instructions",
                },
                "type": "Description",
              },
              Object {
                "label": "oie.email.verify.alternate.showCodeTextField",
                "options": Object {
                  "nextStepIndex": 1,
                  "type": "button",
                  "variant": "secondary",
                },
                "type": "StepperButton",
              },
            ],
            "type": "VerticalLayout",
          },
          Object {
            "elements": Array [
              Object {
                "options": Object {
                  "action": [Function],
                  "ctaText": "email.code.not.received",
                  "linkLabel": "email.button.resend",
                },
                "type": "Reminder",
              },
              Object {
                "options": Object {
                  "content": "oie.email.mfa.title",
                },
                "type": "Title",
              },
              Object {
                "options": Object {
                  "content": "oie.email.verify.alternate.magicLinkToEmailAddressoie.email.verify.alternate.instructions",
                },
                "type": "Description",
              },
              Object {
                "label": "email.enroll.enterCode",
                "name": "credentials.passcode",
              },
              Object {
                "label": "mfa.challenge.verify",
                "options": Object {
                  "step": "",
                  "type": "submit",
                },
                "scope": "#/properties/submit",
                "type": "Button",
              },
            ],
            "type": "VerticalLayout",
          },
        ],
        "type": "Stepper",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;
